--- a/brightnessd.service
+++ b/brightnessd.service
@@ -4,3 +4,6 @@ Description=DDC/CI Brightness Control Daemon
 [Service]
 ExecStart=/home/james/.local/bin/brightnessd
 Restart=on-failure
+
+[Install]
+WantedBy=default.target
